--- a/Thesis/inleiding.tex
+++ b/Thesis/inleiding.tex
@@ -52,6 +52,7 @@ om ze volledig te overlopen.
 \includegraphics[width=10cm]{images/tbir.eps}
 \label{fig:tbir}
 }
+\vspace{5pt}
 \subfigure[]{
 \includegraphics[width=10cm]{images/cbir.eps}
 \label{fig:cbir}
