--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -70,7 +70,7 @@
 	address 	= {Toronto, Canada},
 }
 
-@Misc{phillips:beeldverwerking,
+@Misc{philips:beeldverwerking,
   	author 			= {Phillips, W.},
   	title 			= {Beeldverwerking},
   	howpublished 	= {Course text},
@@ -196,3 +196,63 @@
 	pages		= {664--667},
 }
 
+@Inproceedings{van_den_broek:human_color_categorization_for_cbir,
+   	author 		= {Van den Broek, E. L. and Kisters, P. M. F. and Vuurpijl, L. G.},
+   	title 		= {The utilization of human color categorization for content-based image retrieval},
+   	year 		= 2004,
+	booktitle 	= {Human Vision and Electronic Imaging IX},
+	month 		= jan,
+	pages		= {351--362},
+}
+
+@Article{wu:color_quantization_by_dynamic_programming_and_principal_analysis,
+   	author 		= {Wu, X.},
+   	title 		= {Color quantization by dynamic programming and pricipal analysis},
+   	journal 	= {ACM Transactions on Graphics},
+   	month 		= oct,
+   	year 		= 1992,
+   	volume 		= {11},
+   	number 		= {4},
+}
+
+@Article{de_cock:on_unsuitable_relations_for_approx_equal,
+  	author 		= {De Cock, M. and Kerre, E. E.},
+  	title 		= {On (un)suitable fuzzy relations tot model approximate equality},
+  	journal 	= {Fuzzy Sets and Systems},
+  	volume 		= 133,
+  	number 		= 2,
+  	year 		= 2003,
+  	month 		= jan,
+  	pages 		= {137--153},
+}
+
+@Article{de_cock:why_fuzzy_relations_do_not_resolve_pointcare_paradox,
+  	author 		= {De Cock, M. and Kerre, E. E.},
+  	title 		= {Why fuzzy $\mathcal{T}$-equivalence relations do not resolve the {P}oincar\'e paradox, and related issues},
+  	journal 	= {Fuzzy Sets and Systems},
+  	volume 		= 133,
+  	number 		= 2,
+  	year 		= 2003,
+  	month 		= jan,
+  	pages 		= {181--192},
+}
+
+@Article{zadeh:similarity_relations_and_fuzzy_orderings,
+  	author 		= {Zadeh, L. A.},
+  	title 		= {Similarity relations and fuzzy orderings},
+  	journal 	= {Information Sciences},
+  	volume 		= 3,
+  	number 		= 2,
+  	year 		= 1971,
+  	month		= apr,
+  	pages 		= {177--200},
+}
+
+@Inproceedings{vanderweken:construction_of_quality_measures,
+	author 		= {Van der Weken, D. and De Witte, V. and Nachtegael, M. and Schulte, S. and Kerre, E. E.},
+	title 		= {The construction of quality measures for colour images: two approaches},
+	booktitle 	= {Information Processing and Management of Uncertainty in Knowledge-Based Systems (IPMU)},
+	year 		= 2006,
+	month 		= jul,
+	address 	= {Paris, France},
+}
